wip fixing spacing

--- a/styles/Components/Product/ProductQuickview.scss
+++ b/styles/Components/Product/ProductQuickview.scss
@@ -12,11 +12,14 @@
 
     @include breakpoint-up('md') {
         display: flex;
+        max-width: 1175px;
+        width: 100%;
     }
 
     .product-gallery {
+        display: block;
+        
         @include breakpoint-up('md') {
-            display: block;
             margin-right: 30px;
             width: 50%;
         }
